fix: build issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,10 @@
   "[terraform]": {
     "editor.defaultFormatter": "hashicorp.terraform"
   },
-  "eslint.validate": ["json"]
+  "eslint.validate": [
+    "json"
+  ],
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
