--- a/package.json
+++ b/package.json
@@ -202,6 +202,7 @@
     "nestjs-pino": "4.3.0",
     "nestjs-typebox": "3.1.1",
     "next": "15.2.0-canary.39",
+    "next-plugin-svgr": "^1.1.12",
     "next-seo": "6.6.0",
     "next-themes": "0.4.4",
     "object-typed": "1.0.0",
@@ -247,7 +248,7 @@
     "sonner": "1.5.0",
     "stack-trace": "1.0.0-pre2",
     "storybook": "8.4.7",
-    "styled-components": "6.1.8",
+    "styled-components": "6.1.15",
     "sucrase": "3.32.0",
     "supertest": "6.3.3",
     "swr": "2.2.5",
@@ -327,7 +328,6 @@
     "@storybook/test-runner": "0.21.0",
     "@storybook/testing-library": "0.2.2",
     "@stylistic/eslint-plugin-ts": "1.6.3",
-    "@svgr/webpack": "8.0.1",
     "@swc-node/register": "1.10.9",
     "@swc/cli": "0.6.0",
     "@swc/core": "1.10.11",
