--- a/package.json
+++ b/package.json
@@ -135,10 +135,11 @@
     "@rjsf/core": "5.18.3",
     "@rjsf/utils": "5.18.3",
     "@rjsf/validator-ajv8": "5.18.3",
-    "@sentry/nestjs": "8.53.0",
+    "@sentry/core": "^8.54.0",
+    "@sentry/nestjs": "8.54.0",
     "@sentry/nextjs": "8.54.0",
-    "@sentry/profiling-node": "8.53.0",
-    "@sentry/react": "8.53.0",
+    "@sentry/profiling-node": "8.54.0",
+    "@sentry/react": "8.54.0",
     "@shopify/network": "3.3.0",
     "@shopify/react-performance": "4.1.0",
     "@sinclair/typebox": "0.34.13",
@@ -312,8 +313,8 @@
     "@nx/workspace": "20.4.0",
     "@parcel/watcher": "2.4.1",
     "@playwright/test": "1.50.1",
-    "@sentry/types": "8.53.0",
-    "@sentry/utils": "8.53.0",
+    "@sentry/types": "8.54.0",
+    "@sentry/utils": "8.54.0",
     "@storybook/addon-essentials": "8.4.7",
     "@storybook/addon-interactions": "8.4.7",
     "@storybook/addon-themes": "8.4.7",
