--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
     "cm6-graphql": "0.1.1",
     "cmdk": "1.0.0",
     "codemirror": "6.0.1",
+    "commitlint-config-cz": "^0.13.3",
     "cors": "2.8.5",
     "cross-fetch": "3.1.4",
     "deep-object-diff": "1.1.9",
@@ -357,7 +358,7 @@
     "@types/jsonwebtoken": "9.0.6",
     "@types/mailchimp__mailchimp_marketing": "3.0.8",
     "@types/multer": "1.4.11",
-    "@types/node": "18.19.9",
+    "@types/node": "22.13.1",
     "@types/passport-jwt": "4.0.1",
     "@types/prettier": "2.7.3",
     "@types/react": "19.0.8",
