fix: frontend domain app specs

--- a/libs/frontend/domain/app/tsconfig.spec.json
+++ b/libs/frontend/domain/app/tsconfig.spec.json
@@ -12,6 +12,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
+    "jest.mocks.ts",
     "jest.config.ts",
     "**/*.test.ts",
     "**/*.spec.ts",
