--- a/package.json
+++ b/package.json
@@ -208,6 +208,7 @@
     "next-seo": "6.6.0",
     "next-themes": "0.4.4",
     "object-typed": "1.0.0",
+    "p-min-delay": "^4.0.2",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "path-to-regexp": "6.2.1",
