--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "@apollo/server": "4.11.2",
     "@auth0/nextjs-auth0": "3.5.0",
     "@awwong1/oauth4webapi": "1.0.0",
+    "@codelab-codegen/codelab-preset": "file:dist/libs/external/codelab-codegen/codelab-preset",
     "@codelab-codegen/typescript-fetch": "file:dist/libs/external/codelab-codegen/typescript-fetch",
     "@codelab-codegen/typescript-server-fetch": "file:dist/libs/external/codelab-codegen/typescript-server-fetch",
-    "@codelab-codegen/codelab-preset": "file:dist/libs/external/codelab-codegen/codelab-preset",
     "@codelab/eslint-plugin": "file:dist/libs/tools/eslint-plugin",
     "@codelab/tools-workspace": "file:dist/libs/tools/workspace",
     "@codelab/tsc-check": "file:dist/libs/tools/tsc-check",
@@ -207,6 +207,7 @@
     "next-seo": "6.5.0",
     "next-themes": "0.3.0",
     "object-typed": "1.0.0",
+    "p-min-delay": "^4.0.2",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "path-to-regexp": "6.2.1",
