--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "@sinclair/typebox": "0.34.13",
     "@sotaproject/strikethrough": "1.0.1",
     "@supabase/supabase-js": "2.1.1",
+    "@svgr/webpack": "^8.1.0",
     "@swc/helpers": "0.5.15",
     "@twind/core": "1.1.3",
     "@twind/preset-tailwind": "1.1.4",
@@ -203,8 +204,7 @@
     "neo4j-driver": "5.27.0",
     "nestjs-pino": "4.3.0",
     "nestjs-typebox": "3.1.1",
-    "next": "15.2.0-canary.46",
-    "next-plugin-svgr": "^1.1.12",
+    "next": "15.2.0-canary.47",
     "next-seo": "6.6.0",
     "next-themes": "0.4.4",
     "object-typed": "1.0.0",
