--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -351,6 +351,7 @@ jobs:
             echo $SHARD;
             echo $CIRCLE_NODE_TOTAL;
             node -v
+            which node
 
             pnpm nx e2e web-e2e -c ci --shard=${SHARD}/${CIRCLE_NODE_TOTAL}
           name: Run E2E Tests
