--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -32,7 +32,7 @@ steps:
         echo $SHARD;
         echo $CIRCLE_NODE_TOTAL;
 
-        pnpm nx e2e web-e2e -c ci --shard=${SHARD}/${CIRCLE_NODE_TOTAL}
+        pnpm nx e2e web-e2e -c ci --shard=${SHARD}/${CIRCLE_NODE_TOTAL} --verbose
   - store_artifacts:
       path: ~/project/dist/.playwright/apps/web-e2e/playwright-report
       destination: playwright-report
