--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -48,7 +48,8 @@
       "executor": "@nx/js:node",
       "options": {
         "buildTarget": "api:build:dev",
-        "runtimeArgs": ["--enable-source-maps", "--no-node-snapshot"]
+        "runtimeArgs": ["--enable-source-maps", "--no-node-snapshot"],
+        "args": ["--trace-deprecation"]
       }
     },
     "test": {
