ci: upgrade corepack
ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

ci: upgrade corepack

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,7 @@ commands:
             nvm install 22.13.1
             nvm alias default 22.13.1
             node -v
+            which node
           name: Set Node Version
   install-packages:
     steps:
@@ -95,6 +96,11 @@ commands:
       - run:
           command: pnpm install --frozen-lockfile --verbose
           name: Install NPM Packages
+      - run:
+          command: |
+            pnpm store path
+            pnpm store prune --force
+          name: Prune pnpm store
       - save_cache:
           key: pnpm-cache-{{ checksum "pnpm-lock.yaml" }}
           name: Save pnpm Cache
@@ -122,8 +128,14 @@ commands:
     steps:
       - run:
           command: |
+            set -x
+
+            # Install corepack using the correct path
+            # https://github.com/pnpm/pnpm/issues/9029
+            sudo npm install -g corepack@0.31.0
+
             sudo corepack enable
-            sudo corepack prepare pnpm@9.1.1 --activate
+            sudo corepack prepare pnpm@9.15.5 --activate
             pnpm config set store-dir ~/.pnpm-store
           name: Install pnpm package manager
   install-terraform:
@@ -151,6 +163,13 @@ commands:
             sudo apt update
             sudo apt install terraform=1.7.0-*
           name: Install Terraform
+  load-nvm:
+    steps:
+      - run:
+          command: |
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+          name: Load NVM
   login-docker:
     description: Login to Docker
     steps:
@@ -158,11 +177,6 @@ commands:
           command: |
             echo "$DIGITALOCEAN_ACCESS_TOKEN" | docker login --username codelabapp --password-stdin registry.digitalocean.com
           name: Login to Docker Registry
-  restore-infra-workspace:
-    description: Restore Infra Workspace
-    steps:
-      - restore-workspace
-      - install-terraform
   restore-workspace:
     description: Restore Workspace
     steps:
@@ -178,9 +192,33 @@ commands:
           keys:
             - nvm-cache-{{ checksum ".nvmrc" }}
           name: Restore NVM Cache
+      - load-nvm
+      - install-pnpm
+      - setup-env
+  restore-workspace-database:
+    description: Restore Workspace
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/
+      - restore_cache:
+          keys:
+            - node-modules-cache-{{ checksum "pnpm-lock.yaml" }}
+            - node-modules-cache-
+          name: Restore node_modules Cache
+      - restore_cache:
+          keys:
+            - nvm-cache-{{ checksum ".nvmrc" }}
+          name: Restore NVM Cache
+      - load-nvm
       - install-pnpm
       - install-cypher-shell
       - setup-env
+  restore-workspace-infra:
+    description: Restore Infra Workspace
+    steps:
+      - restore-workspace
+      - install-terraform
   setup-env:
     description: Setup Env
     steps:
@@ -196,13 +234,14 @@ commands:
           name: Run Neo4j Memory Recommendations
       - run:
           command: |
-            ~/project/.docker/cypher/scripts/enable-cdc.sh
+            ./enable-cdc.sh
           name: Enable CDC
+          working_directory: ~/project/.docker/cypher/scripts
       - run:
           command: |
-            ~/project/.docker/cypher/scripts/apply-constraints.sh
+            ./apply-constraints.sh
           name: Apply Neo4j Constraints
-          working_directory: ~/project/.docker/cypher
+          working_directory: ~/project/.docker/cypher/scripts
 executors:
   docker-node:
     docker:
@@ -340,13 +379,24 @@ jobs:
         type: string
     resource_class: << parameters.resource_class >>
     steps:
-      - restore-workspace
+      - restore-workspace-database
       - setup-neo4j
       - run: pnpm npx playwright install-deps
       - run:
           command: |
-            SHARD="$((${CIRCLE_NODE_INDEX}+1))"
+            set -x
 
+            # Debug Node installation and environment
+            which node        # Where is Node installed
+            echo $PATH        # Check PATH
+            ls -l $(which node)  # Check Node executable permissions
+
+            # Additional debugging info
+            node --version    # Verify Node version
+            echo $NODE_ENV    # Check Node environment
+
+            # Original test command
+            SHARD="$((${CIRCLE_NODE_INDEX}+1))"
             echo $SHARD;
             echo $CIRCLE_NODE_TOTAL;
             node -v
@@ -371,7 +421,7 @@ jobs:
         type: string
     resource_class: << parameters.resource_class >>
     steps:
-      - restore-workspace
+      - restore-workspace-database
       - setup-neo4j
       - run:
           command: pnpm cli tasks int --stage ci
@@ -542,7 +592,7 @@ jobs:
           - ci
         type: enum
     steps:
-      - restore-infra-workspace
+      - restore-workspace-infra
       - run:
           command: pnpm cli terraform --stage << parameters.stage >> init
           name: Terraform Init
@@ -558,7 +608,7 @@ jobs:
           - ci
         type: enum
     steps:
-      - restore-infra-workspace
+      - restore-workspace-infra
       - run:
           command: |
             echo "credentials \"app.terraform.io\" {token = \"$TERRAFORM_USER_TOKEN\"}" >> $HOME/.terraformrc
