--- a/apps/web-e2e/project.json
+++ b/apps/web-e2e/project.json
@@ -18,7 +18,9 @@
       },
       "configurations": {
         "test": {},
-        "ci": {}
+        "ci": {
+          "debug": true
+        }
       }
     },
     "e2e-ui": {
