--- a/.circleci/config/commands/install-nvm.yml
+++ b/.circleci/config/commands/install-nvm.yml
@@ -1,3 +1,4 @@
+# We can either persist across workspace or re-install each, we choose to persist .nvm, then load nvm
 steps:
   - restore_cache:
       name: 'Restore NVM Cache'
@@ -17,3 +18,4 @@ steps:
         nvm install 22.13.1
         nvm alias default 22.13.1
         node -v
+        which node
