--- a/.circleci/config/commands/install-packages.yml
+++ b/.circleci/config/commands/install-packages.yml
@@ -12,11 +12,11 @@ steps:
       name: 'Install NPM Packages'
       command: pnpm install --frozen-lockfile --verbose
   # Need to bust cache manually by updating lock file
-  # - run:
-  #     name: 'Prune pnpm store'
-  #     command: |
-  #       pnpm store path
-  #       pnpm store prune --force
+  - run:
+      name: 'Prune pnpm store'
+      command: |
+        pnpm store path
+        pnpm store prune --force
   - save_cache:
       name: 'Save pnpm Cache'
       key: pnpm-cache-{{ checksum "pnpm-lock.yaml" }}
