--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -44,7 +44,7 @@
         },
         "ci": {
           "buildTarget": "web:build:ci",
-          "dev": false
+          "dev": true
         },
         "prod": {
           "buildTarget": "web:build:prod",
