ci: add dev to ci so don't need to build first before e2e

--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -43,8 +43,7 @@
           "port": 3001
         },
         "ci": {
-          "buildTarget": "web:build:ci",
-          "dev": false
+          "buildTarget": "web:build:ci"
         },
         "prod": {
           "buildTarget": "web:build:prod",
