--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -301,7 +301,7 @@ jobs:
         type: string
     resource_class: << parameters.resource_class >>
     steps:
-      - restore-workspace
+      - restore-workspace-database
       - setup-neo4j
       - run:
           command: pnpm cli tasks graphql-codegen --stage ci
@@ -858,7 +858,7 @@ workflows:
                 - staging
           max_old_space_size: 4096
           requires:
-            - build-nx-apps
+            - setup-workspace
           resource_class: large
       - notify-success:
           filters:
