--- a/.circleci/config/jobs/codegen.yml
+++ b/.circleci/config/jobs/codegen.yml
@@ -7,7 +7,7 @@ executor: docker-node-neo4j
 resource_class: << parameters.resource_class >>
 
 steps:
-  - restore-workspace
+  - restore-workspace-database
   - setup-neo4j
   - run:
       name: 'Check GraphQL Codegen'
