--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -15,6 +15,13 @@ parallelism: 4
 steps:
   - restore-workspace-database
   - setup-neo4j
+  - restore_cache:
+      name: 'Restore NX Cache'
+      keys:
+        # This is needed for e2e to run, the specs don't seem to run without the apps having pre-built
+        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-
+        - nx-cache-
   - run: pnpm npx playwright install-deps
   # - setup_remote_docker:
   #     version: default
@@ -27,17 +34,6 @@ steps:
       # command: pnpm nx e2e web-e2e -c ci --verbose
       no_output_timeout: 15m
       command: |
-        set -x
-
-        # Debug Node installation and environment
-        which node        # Where is Node installed
-        echo $PATH        # Check PATH
-        ls -l $(which node)  # Check Node executable permissions
-
-        # Additional debugging info
-        node --version    # Verify Node version
-        echo $NODE_ENV    # Check Node environment
-
         # Original test command
         SHARD="$((${CIRCLE_NODE_INDEX}+1))"
         echo $SHARD;
