fix: resource e2e specs (#3596)
* refactor: hydration

* refactor: hydration

* fix: builder error (#3584)

* fix: hydration failed error

* revert: unwated changes

* fix: types e2e specs

* fix: router search params hydration error

* fix: search params update

* fix: types reload problem

* revert: restore export

* fix: tags loading screen

* fix: type reload problem

* fix: svg loader

* chore: upgrade nx to latest

* ci: check node path

* ci: upgrade circleci node orbs

* ci: update nvm

* revert: type reload problem

This reverts commit 3c1f22ecd2b20232d7741ccf1d61e64871a46771.

* revert: unwated changes

---------

Co-authored-by: Webber Wang <webber@codelab.app>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -350,6 +350,8 @@ jobs:
 
             echo $SHARD;
             echo $CIRCLE_NODE_TOTAL;
+            node -v
+            which node
 
             pnpm nx e2e web-e2e -c ci --shard=${SHARD}/${CIRCLE_NODE_TOTAL}
           name: Run E2E Tests
@@ -607,7 +609,7 @@ jobs:
       - store_test_results:
           path: ./tmp/reports/test-unit
 orbs:
-  node: circleci/node@5.1.0
+  node: circleci/node@7.1.0
   nx: nrwl/nx@1.6.2
   queue: eddiewebb/queue@2.2.1
   slack: circleci/slack@4.12.5
