--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "@sinclair/typebox": "0.34.13",
     "@sotaproject/strikethrough": "1.0.1",
     "@supabase/supabase-js": "2.1.1",
+    "@svgr/webpack": "^8.1.0",
     "@swc/helpers": "0.5.15",
     "@twind/core": "1.1.3",
     "@twind/preset-tailwind": "1.1.4",
@@ -203,8 +204,7 @@
     "neo4j-driver": "5.27.0",
     "nestjs-pino": "4.3.0",
     "nestjs-typebox": "3.1.1",
-    "next": "15.2.0-canary.46",
-    "next-plugin-svgr": "^1.1.12",
+    "next": "15.2.0-canary.47",
     "next-seo": "6.6.0",
     "next-themes": "0.4.4",
     "object-typed": "1.0.0",
@@ -297,22 +297,22 @@
     "@nestjs/schematics": "11.0.0",
     "@nestjs/testing": "11.0.7",
     "@next/eslint-plugin-next": "15.1.6",
-    "@nx/devkit": "20.4.1",
-    "@nx/eslint": "20.4.1",
-    "@nx/eslint-plugin": "20.4.1",
-    "@nx/jest": "20.4.1",
-    "@nx/js": "20.4.1",
-    "@nx/nest": "20.4.1",
-    "@nx/next": "20.4.1",
-    "@nx/node": "20.4.1",
-    "@nx/playwright": "20.4.1",
-    "@nx/plugin": "20.4.1",
-    "@nx/react": "20.4.1",
-    "@nx/storybook": "20.4.1",
-    "@nx/vite": "20.4.1",
-    "@nx/web": "20.4.1",
-    "@nx/webpack": "20.4.1",
-    "@nx/workspace": "20.4.1",
+    "@nx/devkit": "20.4.2",
+    "@nx/eslint": "20.4.2",
+    "@nx/eslint-plugin": "20.4.2",
+    "@nx/jest": "20.4.2",
+    "@nx/js": "20.4.2",
+    "@nx/nest": "20.4.2",
+    "@nx/next": "20.4.2",
+    "@nx/node": "20.4.2",
+    "@nx/playwright": "20.4.2",
+    "@nx/plugin": "20.4.2",
+    "@nx/react": "20.4.2",
+    "@nx/storybook": "20.4.2",
+    "@nx/vite": "20.4.2",
+    "@nx/web": "20.4.2",
+    "@nx/webpack": "20.4.2",
+    "@nx/workspace": "20.4.2",
     "@parcel/watcher": "2.4.1",
     "@playwright/test": "1.50.1",
     "@sentry/types": "8.54.0",
@@ -435,7 +435,7 @@
     "minimatch": "9.0.4",
     "msw": "^2.7.0",
     "msw-storybook-addon": "^2.0.4",
-    "nx": "20.4.1",
+    "nx": "20.4.2",
     "pino-pretty": "13.0.0",
     "postcss": "8.4.45",
     "swc-loader": "^0.2.6",
