--- a/.circleci/config/executors/docker-node-neo4j.yml
+++ b/.circleci/config/executors/docker-node-neo4j.yml
@@ -1,6 +1,7 @@
 # Docker containers work on a merged networking stack, the second container should make it available in localhost
 # https://discuss.circleci.com/t/whats-the-docker-hostname-for-the-second-container/20101
 docker:
+  # - image: mcr.microsoft.com/playwright:v1.50.0-noble
   - image: cimg/node:22.13.1-browsers
     # https://circleci.com/docs/configuration-reference/#docker
     name: 127.0.0.1
