--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -15,15 +15,13 @@ parallelism: 4
 steps:
   - restore-workspace-database
   - setup-neo4j
-  # Move from job to here to save extra workspace setup
-  - build-nx-apps
-  # - restore_cache:
-  #     name: 'Restore NX Cache'
-  #     keys:
-  #       # This is needed for e2e to run, the specs don't seem to run without the apps having pre-built
-  #       - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
-  #       - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-
-  #       - nx-cache-
+  - restore_cache:
+      name: 'Restore NX Cache'
+      keys:
+        # This is needed for e2e to run, the specs don't seem to run without the apps having pre-built
+        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-
+        - nx-cache-
   - run: pnpm npx playwright install-deps
   # - setup_remote_docker:
   #     version: default
