--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -13,8 +13,15 @@ environment:
 
 parallelism: 4
 steps:
-  - restore-workspace
+  - restore-workspace-database
   - setup-neo4j
+  - restore_cache:
+      name: 'Restore NX Cache'
+      keys:
+        # This is needed for e2e to run, the specs don't seem to run without the apps having pre-built
+        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-
+        - nx-cache-
   - run: pnpm npx playwright install-deps
   # - setup_remote_docker:
   #     version: default
@@ -27,12 +34,14 @@ steps:
       # command: pnpm nx e2e web-e2e -c ci --verbose
       no_output_timeout: 15m
       command: |
+        # Original test command
         SHARD="$((${CIRCLE_NODE_INDEX}+1))"
-
         echo $SHARD;
         echo $CIRCLE_NODE_TOTAL;
 
-        pnpm nx e2e web-e2e -c ci --shard=${SHARD}/${CIRCLE_NODE_TOTAL}
+        pnpm nx e2e web-e2e -c ci \
+          --shard=${SHARD}/${CIRCLE_NODE_TOTAL}
+
   - store_artifacts:
       path: ~/project/dist/.playwright/apps/web-e2e/playwright-report
       destination: playwright-report
