--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -47,8 +47,7 @@
       "defaultConfiguration": "dev",
       "executor": "@nx/js:node",
       "options": {
-        "buildTarget": "api:build:dev",
-        "runtimeArgs": ["--enable-source-maps", "--no-node-snapshot"]
+        "buildTarget": "api:build:dev"
       }
     },
     "test": {
