--- a/package.json
+++ b/package.json
@@ -75,10 +75,10 @@
     "@fortawesome/pro-regular-svg-icons": "6.1.2",
     "@fortawesome/pro-solid-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "latest",
-    "@graphql-codegen/add": "^5.0.3",
-    "@graphql-codegen/gql-tag-operations": "^4.0.14",
+    "@graphql-codegen/add": "5.0.3",
+    "@graphql-codegen/gql-tag-operations": "4.0.14",
     "@graphql-codegen/plugin-helpers": "5.1.0",
-    "@graphql-codegen/typed-document-node": "^5.0.13",
+    "@graphql-codegen/typed-document-node": "5.0.13",
     "@graphql-codegen/typescript-document-nodes": "4.0.13",
     "@graphql-tools/merge": "8.2.11",
     "@graphql-tools/utils": "8.12.0",
@@ -135,7 +135,7 @@
     "@rjsf/core": "5.18.3",
     "@rjsf/utils": "5.18.3",
     "@rjsf/validator-ajv8": "5.18.3",
-    "@sentry/core": "^8.54.0",
+    "@sentry/core": "8.54.0",
     "@sentry/nestjs": "8.54.0",
     "@sentry/nextjs": "8.54.0",
     "@sentry/profiling-node": "8.54.0",
@@ -169,7 +169,7 @@
     "cm6-graphql": "0.1.1",
     "cmdk": "1.0.0",
     "codemirror": "6.0.1",
-    "commitlint-config-cz": "^0.13.3",
+    "commitlint-config-cz": "0.13.3",
     "cors": "2.8.5",
     "cross-fetch": "3.1.4",
     "deep-object-diff": "1.1.9",
@@ -188,7 +188,7 @@
     "graphql-request": "6.1.0",
     "graphql-tag": "2.12.6",
     "graphql-ws": "5.16.0",
-    "import-in-the-middle": "^1.12.0",
+    "import-in-the-middle": "1.12.0",
     "input-otp": "1.2.4",
     "isolated-vm": "5.0.3",
     "jest-text-transformer": "1.0.4",
@@ -204,11 +204,12 @@
     "neo4j-driver": "5.27.0",
     "nestjs-pino": "4.3.0",
     "nestjs-typebox": "3.1.1",
-    "next": "15.2.0-canary.47",
+    "next": "15.1.6",
+    "next-plugin-svgr": "1.1.12",
     "next-seo": "6.6.0",
     "next-themes": "0.4.4",
     "object-typed": "1.0.0",
-    "p-min-delay": "^4.0.2",
+    "p-min-delay": "4.0.2",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "path-to-regexp": "6.2.1",
@@ -239,11 +240,11 @@
     "react-sticky-box": "2.0.0",
     "react-stickynode": "4.1.0",
     "react-syntax-highlighter": "15.5.0",
-    "react-use": "17.5.1",
+    "react-use": "17.6.0",
     "recoil": "0.7.7",
     "reflect-metadata": "0.1.13",
     "remeda": "2.17.4",
-    "require-in-the-middle": "^7.5.0",
+    "require-in-the-middle": "7.5.0",
     "rooks": "7.6.1",
     "rxjs": "7.8.0",
     "server-only": "0.0.1",
@@ -320,7 +321,7 @@
     "@storybook/addon-essentials": "8.4.7",
     "@storybook/addon-interactions": "8.4.7",
     "@storybook/addon-themes": "8.4.7",
-    "@storybook/addon-webpack5-compiler-swc": "^2.0.0",
+    "@storybook/addon-webpack5-compiler-swc": "2.0.0",
     "@storybook/core-common": "8.4.7",
     "@storybook/core-server": "8.4.7",
     "@storybook/jest": "0.2.3",
@@ -401,7 +402,7 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-node": "0.3.9",
     "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-ban": "^2.0.0",
+    "eslint-plugin-ban": "2.0.0",
     "eslint-plugin-canonical": "4.15.1",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jest": "27.6.0",
@@ -433,12 +434,12 @@
     "knip": "5.29.2",
     "lint-staged": "15.4.3",
     "minimatch": "9.0.4",
-    "msw": "^2.7.0",
-    "msw-storybook-addon": "^2.0.4",
+    "msw": "2.7.0",
+    "msw-storybook-addon": "2.0.4",
     "nx": "20.4.2",
     "pino-pretty": "13.0.0",
     "postcss": "8.4.45",
-    "swc-loader": "^0.2.6",
+    "swc-loader": "0.2.6",
     "tailwindcss": "3.4.10",
     "ts-essentials": "9.1.2",
     "ts-morph": "19.0.0",
@@ -458,5 +459,5 @@
       "projectName:codelab"
     ]
   },
-  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
+  "packageManager": "pnpm@9.15.5+sha512.845196026aab1cc3f098a0474b64dfbab2afe7a1b4e91dd86895d8e4aa32a7a6d03049e2d0ad770bbe4de023a7122fb68c1a1d6e0d033c7076085f9d5d4800d4"
 }
