--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@mailchimp/mailchimp_marketing": "3.0.80",
     "@neo4j/graphql": "6.3.0",
     "@nestjs/apollo": "13.0.2",
+    "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "11.0.7",
     "@nestjs/config": "4.0.0",
     "@nestjs/core": "11.0.7",
@@ -160,6 +161,7 @@
     "auto-bind": "5.0.1",
     "axios": "1.7.1",
     "body-parser": "1.20.2",
+    "cache-manager": "^6.4.0",
     "chalk": "4.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
