refactor: add custom agent to graphql client (#3603)
refactor: add custom agent to graphql client

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -897,6 +897,9 @@
       "@codelab/frontend/infra/context": [
         "libs/frontend/infra/context/src/index.ts"
       ],
+      "@codelab/frontend/infra/gql-client": [
+        "libs/frontend/infra/gql-client/src/index.ts"
+      ],
       "@codelab/frontend/infra/logger": [
         "libs/frontend/infra/logger/src/index.ts"
       ],
