--- a/package.json
+++ b/package.json
@@ -210,6 +210,7 @@
     "next-plugin-svgr": "1.1.12",
     "next-seo": "6.6.0",
     "next-themes": "0.4.4",
+    "node-fetch": "^3.3.2",
     "object-typed": "1.0.0",
     "p-min-delay": "4.0.2",
     "passport": "0.7.0",
