--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -31,6 +31,7 @@
         "buildTarget": "web:build",
         "port": 3000,
         "turbo": true,
+        "keepAliveTimeout": 120000,
         "hostname": "0.0.0.0",
         "maxWorkers": 4
       },
