--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -249,6 +249,10 @@ executors:
           NEO4J_ACCEPT_LICENSE_AGREEMENT: 'yes'
           NEO4J_AUTH: neo4j/password
           NEO4J_PLUGINS: '["apoc"]'
+          NEO4J_server_jvm_additional: -XX:+ExitOnOutOfMemoryError
+          NEO4J_server_memory_heap_initial__size: 3600m
+          NEO4J_server_memory_heap_max__size: 3600m
+          NEO4J_server_memory_pagecache_size: 4g
         image: neo4j:5.26.0-enterprise
   machine-ubuntu:
     machine:
@@ -366,7 +370,7 @@ jobs:
     environment:
       NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
     executor: docker-node-neo4j
-    parallelism: 4
+    parallelism: 1
     parameters:
       max_old_space_size:
         type: integer
@@ -391,9 +395,20 @@ jobs:
             echo $CIRCLE_NODE_TOTAL;
 
             pnpm nx e2e web-e2e -c ci \
-              --shard=${SHARD}/${CIRCLE_NODE_TOTAL}
+              --shard=${SHARD}/${CIRCLE_NODE_TOTAL} \
+              --testFiles="modules/auth-guard/auth-guard.spec.ts"
           name: Run E2E Tests
           no_output_timeout: 15m
+      - run:
+          command: |
+            mkdir -p ~/project/tmp/logs
+
+            docker logs $(docker ps --filter "ancestor=neo4j:5.26.0-enterprise" --format "{{.ID}}") > ~/project/tmp/logs/neo4j.log 2>&1
+          name: Capture Docker logs
+          when: always
+      - store_artifacts:
+          destination: docker-logs
+          path: ~/project/tmp/logs
       - store_artifacts:
           destination: playwright-report
           path: ~/project/tmp/reports/e2e
@@ -848,7 +863,7 @@ workflows:
           max_old_space_size: 4096
           requires:
             - build-nx-apps
-          resource_class: large
+          resource_class: xlarge
       - notify-success:
           filters:
             branches:
